@@ -5,6 +5,7 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.when;
 
@@ -12,7 +13,6 @@ import co.kirikiri.domain.ImageContentType;
 import co.kirikiri.domain.goalroom.GoalRoom;
 import co.kirikiri.domain.goalroom.GoalRoomRoadmapNode;
 import co.kirikiri.domain.goalroom.GoalRoomRoadmapNodes;
-import co.kirikiri.domain.goalroom.GoalRoomStatus;
 import co.kirikiri.domain.goalroom.vo.GoalRoomName;
 import co.kirikiri.domain.goalroom.vo.LimitedMemberCount;
 import co.kirikiri.domain.goalroom.vo.Period;
@@ -30,30 +30,37 @@ import co.kirikiri.domain.roadmap.RoadmapContent;
 import co.kirikiri.domain.roadmap.RoadmapDifficulty;
 import co.kirikiri.domain.roadmap.RoadmapNode;
 import co.kirikiri.domain.roadmap.RoadmapNodes;
+import co.kirikiri.domain.roadmap.RoadmapReview;
 import co.kirikiri.domain.roadmap.RoadmapTag;
 import co.kirikiri.domain.roadmap.RoadmapTags;
 import co.kirikiri.domain.roadmap.vo.RoadmapTagName;
 import co.kirikiri.exception.NotFoundException;
-import co.kirikiri.persistence.dto.GoalRoomLastValueDto;
 import co.kirikiri.persistence.goalroom.GoalRoomRepository;
-import co.kirikiri.persistence.goalroom.dto.RoadmapGoalRoomsFilterType;
+import co.kirikiri.persistence.goalroom.dto.RoadmapGoalRoomsOrderType;
 import co.kirikiri.persistence.member.MemberRepository;
 import co.kirikiri.persistence.roadmap.RoadmapCategoryRepository;
 import co.kirikiri.persistence.roadmap.RoadmapContentRepository;
 import co.kirikiri.persistence.roadmap.RoadmapRepository;
+import co.kirikiri.persistence.roadmap.RoadmapReviewRepository;
 import co.kirikiri.service.dto.CustomScrollRequest;
 import co.kirikiri.service.dto.member.response.MemberResponse;
-import co.kirikiri.service.dto.roadmap.RoadmapGoalRoomsFilterTypeDto;
-import co.kirikiri.service.dto.roadmap.request.RoadmapFilterTypeRequest;
+import co.kirikiri.service.dto.roadmap.RoadmapGoalRoomsOrderTypeDto;
+import co.kirikiri.service.dto.roadmap.request.RoadmapOrderTypeRequest;
 import co.kirikiri.service.dto.roadmap.request.RoadmapSearchRequest;
 import co.kirikiri.service.dto.roadmap.response.MemberRoadmapResponse;
+import co.kirikiri.service.dto.roadmap.response.MemberRoadmapResponses;
 import co.kirikiri.service.dto.roadmap.response.RoadmapCategoryResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapContentResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapForListResponse;
+import co.kirikiri.service.dto.roadmap.response.RoadmapForListResponses;
 import co.kirikiri.service.dto.roadmap.response.RoadmapGoalRoomResponse;
+import co.kirikiri.service.dto.roadmap.response.RoadmapGoalRoomResponses;
 import co.kirikiri.service.dto.roadmap.response.RoadmapNodeResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapResponse;
+import co.kirikiri.service.dto.roadmap.response.RoadmapReviewResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapTagResponse;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Collections;
@@ -72,7 +79,7 @@ class RoadmapReadServiceTest {
 
     private final Member member = new Member(1L, new Identifier("identifier1"),
             new EncryptedPassword(new Password("password1!")), new Nickname("닉네임"),
-            new MemberImage("프로필 이미지", "default-member-image", ImageContentType.JPEG),
+            new MemberImage("originalFileName", "default-member-image", ImageContentType.JPG),
             new MemberProfile(Gender.FEMALE, LocalDate.of(1999, 6, 8), "010-1234-5678"));
     private final LocalDateTime now = LocalDateTime.now();
 
@@ -91,12 +98,19 @@ class RoadmapReadServiceTest {
     @Mock
     private MemberRepository memberRepository;
 
+    @Mock
+    private RoadmapReviewRepository roadmapReviewRepository;
+
+    @Mock
+    private FileService fileService;
+
     @InjectMocks
     private RoadmapReadService roadmapService;
 
     @Test
-    void 특정_아이디를_가지는_로드맵_단일_조회시_해당_로드맵의_정보를_반환한다() {
+    void 특정_아이디를_가지는_로드맵_단일_조회시_해당_로드맵의_정보를_반환한다() throws MalformedURLException {
         //given
+        final Member member = 사용자를_생성한다(1L, "identifier1", "코끼리");
         final RoadmapCategory category = 로드맵_카테고리를_생성한다(1L, "운동");
         final RoadmapContent content = 로드맵_컨텐츠를_생성한다(1L, "콘텐츠 내용");
         final Roadmap roadmap = 로드맵을_생성한다("로드맵 제목", category);
@@ -111,6 +125,8 @@ class RoadmapReadServiceTest {
                 .thenReturn(Optional.of(roadmap.getContents().getValues().get(0)));
         when(goalRoomRepository.findByRoadmap(any()))
                 .thenReturn(goalRooms);
+        when(fileService.generateUrl(anyString(), any()))
+                .thenReturn(new URL("http://example.com/serverFilePath"));
 
         //when
         final RoadmapResponse roadmapResponse = roadmapService.findRoadmap(roadmapId);
@@ -118,14 +134,11 @@ class RoadmapReadServiceTest {
         //then
         final RoadmapResponse expectedResponse = new RoadmapResponse(
                 roadmapId, new RoadmapCategoryResponse(1L, "운동"), "로드맵 제목", "로드맵 소개글",
-                new MemberResponse(1L, "닉네임", "default-member-image"),
-                new RoadmapContentResponse(1L, "로드맵 본문",
-                        List.of(
-                                new RoadmapNodeResponse(1L, "로드맵 노드1 제목", "로드맵 노드1 설명", Collections.emptyList())
-                        )),
-                "DIFFICULT", 30, now,
-                List.of(
-                        new RoadmapTagResponse(1L, "태그1"),
+                new MemberResponse(1L, "닉네임", "http://example.com/serverFilePath"),
+                new RoadmapContentResponse(1L, "로드맵 본문", List.of(
+                        new RoadmapNodeResponse(1L, "로드맵 노드1 제목", "로드맵 노드1 설명", Collections.emptyList())
+                )), "DIFFICULT", 30, now,
+                List.of(new RoadmapTagResponse(1L, "태그1"),
                         new RoadmapTagResponse(2L, "태그2")),
                 2L, 2L, 2L
         );
@@ -154,16 +167,16 @@ class RoadmapReadServiceTest {
                 .thenReturn(Optional.empty());
 
         final Long categoryId = 1L;
-        final RoadmapFilterTypeRequest filterType = RoadmapFilterTypeRequest.LATEST;
-        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
+        final RoadmapOrderTypeRequest filterType = RoadmapOrderTypeRequest.LATEST;
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 10);
 
         // expected
-        assertThatThrownBy(() -> roadmapService.findRoadmapsByFilterType(categoryId, filterType, scrollRequest))
+        assertThatThrownBy(() -> roadmapService.findRoadmapsByOrderType(categoryId, filterType, scrollRequest))
                 .isInstanceOf(NotFoundException.class);
     }
 
     @Test
-    void 로드맵_목록_조회_시_필터_조건이_null이면_최신순으로_조회한다() {
+    void 로드맵_목록_조회_시_필터_조건이_null이면_최신순으로_조회한다() throws MalformedURLException {
         // given
         final RoadmapCategory category = new RoadmapCategory(1L, "여행");
         final List<Roadmap> roadmaps = List.of(
@@ -174,64 +187,21 @@ class RoadmapReadServiceTest {
                 .thenReturn(Optional.of(category));
         when(roadmapRepository.findRoadmapsByCategory(any(), any(), any(), anyInt()))
                 .thenReturn(roadmaps);
+        given(fileService.generateUrl(anyString(), any()))
+                .willReturn(new URL("http://example.com/serverFilePath"));
 
         final Long categoryId = 1L;
-        final RoadmapFilterTypeRequest filterType = null;
-        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
+        final RoadmapOrderTypeRequest filterType = null;
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 10);
 
         // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.findRoadmapsByFilterType(
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByOrderType(
                 categoryId, filterType, scrollRequest);
 
         // then
-        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(
-                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
-                new MemberResponse(1L, "닉네임", "default-member-image"),
-                new RoadmapCategoryResponse(1, "여행"),
-                List.of(
-                        new RoadmapTagResponse(1L, "태그1"),
-                        new RoadmapTagResponse(2L, "태그2")));
-
-        final RoadmapForListResponse secondRoadmapResponse = new RoadmapForListResponse(
-                1L, "두 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30,
-                LocalDateTime.now(),
-                new MemberResponse(1L, "닉네임", "default-member-image"),
-                new RoadmapCategoryResponse(1, "여행"),
-                List.of(
-                        new RoadmapTagResponse(1L, "태그1"),
-                        new RoadmapTagResponse(2L, "태그2")));
-
-        final List<RoadmapForListResponse> expected = List.of(firstRoadmapResponse, secondRoadmapResponse);
-
-        assertThat(roadmapResponses)
-                .usingRecursiveComparison()
-                .ignoringFields("createdAt")
-                .isEqualTo(expected);
-    }
-
-    @Test
-    void 로드맵_목록_조회_시_카테고리_조건이_null이면_전체_카테고리를_대상으로_최신순으로_조회한다() {
-        // given
-        final RoadmapCategory category = new RoadmapCategory(1L, "여행");
-        final List<Roadmap> roadmaps = List.of(
-                로드맵을_생성한다("첫 번째 로드맵", category),
-                로드맵을_생성한다("두 번째 로드맵", category));
-
-        when(roadmapRepository.findRoadmapsByCategory(any(), any(), any(), anyInt()))
-                .thenReturn(roadmaps);
-
-        final Long categoryId = null;
-        final RoadmapFilterTypeRequest filterType = RoadmapFilterTypeRequest.LATEST;
-        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
-
-        // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.findRoadmapsByFilterType(
-                categoryId, filterType, scrollRequest);
-
-        // then
-        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(
-                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
-                new MemberResponse(1L, "닉네임", "default-member-image"),
+        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "http://example.com/serverFilePath"),
                 new RoadmapCategoryResponse(1, "여행"),
                 List.of(
                         new RoadmapTagResponse(1L, "태그1"),
@@ -239,22 +209,109 @@ class RoadmapReadServiceTest {
 
         final RoadmapForListResponse secondRoadmapResponse = new RoadmapForListResponse(1L, "두 번째 로드맵", "로드맵 소개글",
                 "DIFFICULT", 30, LocalDateTime.now(),
-                new MemberResponse(1L, "닉네임", "default-member-image"),
+                new MemberResponse(1L, "닉네임", "http://example.com/serverFilePath"),
                 new RoadmapCategoryResponse(1, "여행"),
                 List.of(
                         new RoadmapTagResponse(1L, "태그1"),
                         new RoadmapTagResponse(2L, "태그2")));
 
-        final List<RoadmapForListResponse> expected = List.of(firstRoadmapResponse, secondRoadmapResponse);
+        final List<RoadmapForListResponse> responses = List.of(firstRoadmapResponse, secondRoadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(responses, false);
 
         assertThat(roadmapResponses)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
     @Test
-    void 카테고리_아이디와_필터링_조건을_통해_로드맵_목록을_조회한다() {
+    void 로드맵_목록_조회시_다음_요소가_존재하면_true로_반환한다() throws MalformedURLException {
+        // given
+        final RoadmapCategory category = new RoadmapCategory(1L, "여행");
+        final List<Roadmap> roadmaps = List.of(
+                로드맵을_생성한다("첫 번째 로드맵", category),
+                로드맵을_생성한다("두 번째 로드맵", category));
+
+        when(roadmapCategoryRepository.findById(any()))
+                .thenReturn(Optional.of(category));
+        when(roadmapRepository.findRoadmapsByCategory(any(), any(), any(), anyInt()))
+                .thenReturn(roadmaps);
+        given(fileService.generateUrl(anyString(), any()))
+                .willReturn(new URL("http://example.com/serverFilePath"));
+
+        final Long categoryId = 1L;
+        final RoadmapOrderTypeRequest filterType = null;
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 1);
+
+        // when
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByOrderType(
+                categoryId, filterType, scrollRequest);
+
+        // then
+        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(
+                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "http://example.com/serverFilePath"),
+                new RoadmapCategoryResponse(1, "여행"),
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
+
+        final List<RoadmapForListResponse> responses = List.of(firstRoadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(responses, true);
+
+        assertThat(roadmapResponses)
+                .usingRecursiveComparison()
+                .ignoringFields("responses.createdAt")
+                .isEqualTo(expected);
+    }
+
+    @Test
+    void 로드맵_목록_조회_시_카테고리_조건이_null이면_전체_카테고리를_대상으로_최신순으로_조회한다() throws MalformedURLException {
+        // given
+        final RoadmapCategory category = new RoadmapCategory(1L, "여행");
+        final List<Roadmap> roadmaps = List.of(로드맵을_생성한다("첫 번째 로드맵", category), 로드맵을_생성한다("두 번째 로드맵", category));
+
+        when(roadmapRepository.findRoadmapsByCategory(any(), any(), any(), anyInt()))
+                .thenReturn(roadmaps);
+        given(fileService.generateUrl(anyString(), any()))
+                .willReturn(new URL("http://example.com/serverFilePath"));
+
+        final Long categoryId = null;
+        final RoadmapOrderTypeRequest filterType = RoadmapOrderTypeRequest.LATEST;
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 10);
+
+        // when
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByOrderType(
+                categoryId, filterType, scrollRequest);
+
+        // then
+        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "http://example.com/serverFilePath"),
+                new RoadmapCategoryResponse(1, "여행"),
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
+
+        final RoadmapForListResponse secondRoadmapResponse = new RoadmapForListResponse(1L, "두 번째 로드맵", "로드맵 소개글",
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "http://example.com/serverFilePath"),
+                new RoadmapCategoryResponse(1, "여행"),
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
+
+        final RoadmapForListResponses expected = new RoadmapForListResponses(
+                List.of(firstRoadmapResponse, secondRoadmapResponse), false);
+
+        assertThat(roadmapResponses)
+                .usingRecursiveComparison()
+                .ignoringFields("responses.createdAt")
+                .isEqualTo(expected);
+    }
+
+    @Test
+    void 카테고리_아이디와_필터링_조건을_통해_로드맵_목록을_조회한다() throws MalformedURLException {
         // given
         final RoadmapCategory category = new RoadmapCategory(1L, "여행");
         final List<Roadmap> roadmaps = List.of(로드맵을_생성한다("첫 번째 로드맵", category));
@@ -263,29 +320,31 @@ class RoadmapReadServiceTest {
                 .thenReturn(Optional.of(new RoadmapCategory("여행")));
         when(roadmapRepository.findRoadmapsByCategory(any(), any(), any(), anyInt()))
                 .thenReturn(roadmaps);
+        given(fileService.generateUrl(anyString(), any()))
+                .willReturn(new URL("http://example.com/serverFilePath"));
 
         final Long categoryId = 1L;
-        final RoadmapFilterTypeRequest filterType = RoadmapFilterTypeRequest.LATEST;
-        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
+        final RoadmapOrderTypeRequest filterType = RoadmapOrderTypeRequest.LATEST;
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 10);
 
         // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.findRoadmapsByFilterType(
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByOrderType(
                 categoryId, filterType, scrollRequest);
 
         // then
-        final RoadmapForListResponse roadmapResponse = new RoadmapForListResponse(
-                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
-                new MemberResponse(1L, "닉네임", "default-member-image"),
+        final RoadmapForListResponse roadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "http://example.com/serverFilePath"),
                 new RoadmapCategoryResponse(1, "여행"),
                 List.of(
                         new RoadmapTagResponse(1L, "태그1"),
                         new RoadmapTagResponse(2L, "태그2")));
 
-        final List<RoadmapForListResponse> expected = List.of(roadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(List.of(roadmapResponse), false);
 
         assertThat(roadmapResponses)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -306,7 +365,7 @@ class RoadmapReadServiceTest {
     }
 
     @Test
-    void 로드맵을_검색한다() {
+    void 로드맵을_검색한다() throws MalformedURLException {
         // given
         final RoadmapCategory category = new RoadmapCategory(1L, "여행");
         final List<Roadmap> roadmaps = List.of(
@@ -315,19 +374,21 @@ class RoadmapReadServiceTest {
 
         when(roadmapRepository.findRoadmapsByCond(any(), any(), any(), anyInt()))
                 .thenReturn(roadmaps);
+        given(fileService.generateUrl(anyString(), any()))
+                .willReturn(new URL("http://example.com/serverFilePath"));
 
-        final RoadmapSearchRequest roadmapSearchRequest = new RoadmapSearchRequest("로드맵", null, null);
-        final RoadmapFilterTypeRequest filterType = RoadmapFilterTypeRequest.LATEST;
-        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
+        final RoadmapSearchRequest roadmapSearchRequest = new RoadmapSearchRequest("로드맵", "닉네임", "태그");
+        final RoadmapOrderTypeRequest filterType = RoadmapOrderTypeRequest.LATEST;
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 10);
 
         // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.search(
+        final RoadmapForListResponses roadmapResponses = roadmapService.search(
                 filterType, roadmapSearchRequest, scrollRequest);
 
         // then
-        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(
-                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
-                new MemberResponse(1L, "닉네임", "default-member-image"),
+        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "http://example.com/serverFilePath"),
                 new RoadmapCategoryResponse(1, "여행"),
                 List.of(
                         new RoadmapTagResponse(1L, "태그1"),
@@ -335,24 +396,25 @@ class RoadmapReadServiceTest {
 
         final RoadmapForListResponse secondRoadmapResponse = new RoadmapForListResponse(1L, "두 번째 로드맵", "로드맵 소개글",
                 "DIFFICULT", 30, LocalDateTime.now(),
-                new MemberResponse(1L, "닉네임", "default-member-image"),
+                new MemberResponse(1L, "닉네임", "http://example.com/serverFilePath"),
                 new RoadmapCategoryResponse(1, "여행"),
                 List.of(
                         new RoadmapTagResponse(1L, "태그1"),
                         new RoadmapTagResponse(2L, "태그2")));
 
-        final List<RoadmapForListResponse> expected = List.of(firstRoadmapResponse, secondRoadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(
+                List.of(firstRoadmapResponse, secondRoadmapResponse), false);
 
         assertThat(roadmapResponses)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
     @Test
     void 사용자가_생성한_로드맵을_조회한다() {
         // given
-        final Member member = 사용자를_생성한다();
+        final Member member = 사용자를_생성한다(1L, "identifier1", "코끼리");
         final RoadmapCategory category1 = 로드맵_카테고리를_생성한다(1L, "운동");
         final RoadmapCategory category2 = 로드맵_카테고리를_생성한다(2L, "여가");
         final Roadmap roadmap1 = 로드맵을_생성한다("로드맵1", category1);
@@ -364,19 +426,19 @@ class RoadmapReadServiceTest {
                 .thenReturn(List.of(roadmap2, roadmap1));
 
         // when
-        final List<MemberRoadmapResponse> memberRoadmapResponse = roadmapService.findAllMemberRoadmaps(
-                "identifier1",
-                new CustomScrollRequest(null, null, null, null, 10));
+        final MemberRoadmapResponses memberRoadmapResponse = roadmapService.findAllMemberRoadmaps(
+                "identifier1", new CustomScrollRequest(null, 10));
 
         // then
-        final List<MemberRoadmapResponse> expected = List.of(
+        final MemberRoadmapResponses expected = new MemberRoadmapResponses(List.of(
                 new MemberRoadmapResponse(2L, "로드맵2", RoadmapDifficulty.DIFFICULT.name(), LocalDateTime.now(),
                         new RoadmapCategoryResponse(2L, "여가")),
                 new MemberRoadmapResponse(1L, "로드맵1", RoadmapDifficulty.DIFFICULT.name(), LocalDateTime.now(),
-                        new RoadmapCategoryResponse(1L, "운동")));
+                        new RoadmapCategoryResponse(1L, "운동"))), false);
 
-        assertThat(memberRoadmapResponse).usingRecursiveComparison()
-                .ignoringFields("roadmapId", "createdAt")
+        assertThat(memberRoadmapResponse)
+                .usingRecursiveComparison()
+                .ignoringFields("responses.roadmapId", "responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -388,17 +450,15 @@ class RoadmapReadServiceTest {
 
         // when
         // then
-        assertThatThrownBy(
-                () -> roadmapService.findAllMemberRoadmaps("identifier1",
-                        new CustomScrollRequest(null, null, null, null, 10)))
-                .isInstanceOf(NotFoundException.class)
+        assertThatThrownBy(() -> roadmapService.findAllMemberRoadmaps("identifier1",
+                new CustomScrollRequest(null, 10))).isInstanceOf(NotFoundException.class)
                 .hasMessageContaining("존재하지 않는 회원입니다.");
     }
 
     @Test
-    void 로드맵의_골룸_목록을_조회한다() {
+    void 로드맵의_골룸_목록을_최신순으로_조회한다() throws MalformedURLException {
         // given
-        final Member member1 = 사용자를_생성한다(1L);
+        final Member member1 = 사용자를_생성한다(1L, "identifier1", "name1");
         final RoadmapNode roadmapNode1 = new RoadmapNode("로드맵 1주차", "로드맵 1주차 내용");
         final RoadmapNode roadmapNode2 = new RoadmapNode("로드맵 2주차", "로드맵 2주차 내용");
         final RoadmapNodes roadmapNodes = new RoadmapNodes(List.of(roadmapNode1, roadmapNode2));
@@ -416,13 +476,13 @@ class RoadmapReadServiceTest {
         final GoalRoomRoadmapNode goalRoomRoadmapNode4 = new GoalRoomRoadmapNode(
                 new Period(TODAY.plusDays(11), TODAY.plusDays(20)), 1, roadmapNode2);
 
-        final Member member2 = 사용자를_생성한다(2L);
+        final Member member2 = 사용자를_생성한다(2L, "identifier2", "name2");
         final GoalRoom goalRoom1 = new GoalRoom(1L, new GoalRoomName("goalroom1"), new LimitedMemberCount(10),
                 roadmapContent, member2);
         goalRoom1.addAllGoalRoomRoadmapNodes(
                 new GoalRoomRoadmapNodes(List.of(goalRoomRoadmapNode1, goalRoomRoadmapNode2)));
 
-        final Member member3 = 사용자를_생성한다(3L);
+        final Member member3 = 사용자를_생성한다(3L, "identifier2", "name3");
         final GoalRoom goalRoom2 = new GoalRoom(2L, new GoalRoomName("goalroom2"), new LimitedMemberCount(10),
                 roadmapContent, member3);
         goalRoom2.addAllGoalRoomRoadmapNodes(
@@ -432,28 +492,29 @@ class RoadmapReadServiceTest {
         given(roadmapRepository.findRoadmapById(anyLong()))
                 .willReturn(Optional.of(roadmap));
         given(goalRoomRepository.findGoalRoomsWithPendingMembersByRoadmapAndCond(roadmap,
-                RoadmapGoalRoomsFilterType.LATEST,
-                GoalRoomLastValueDto.create(new CustomScrollRequest(null, null, null, null, 10)), 10))
+                RoadmapGoalRoomsOrderType.LATEST, null, 10))
                 .willReturn(goalRooms);
+        given(fileService.generateUrl(anyString(), any()))
+                .willReturn(new URL("http://example.com/serverFilePath"));
 
         // when
-        final List<RoadmapGoalRoomResponse> result = roadmapService.findRoadmapGoalRoomsByFilterType(1L,
-                RoadmapGoalRoomsFilterTypeDto.LATEST, new CustomScrollRequest(null, null, null, null, 10));
+        final RoadmapGoalRoomResponses result = roadmapService.findRoadmapGoalRoomsByOrderType(1L,
+                RoadmapGoalRoomsOrderTypeDto.LATEST, new CustomScrollRequest(null, 10));
 
-        final List<RoadmapGoalRoomResponse> expected =
-                List.of(
+        final RoadmapGoalRoomResponses expected =
+                new RoadmapGoalRoomResponses(List.of(
                         new RoadmapGoalRoomResponse(2L, "goalroom2", 1, 10, LocalDateTime.now(),
                                 TODAY, TODAY.plusDays(20),
                                 new MemberResponse(member3.getId(), member3.getNickname().getValue(),
-                                        "default-member-image")),
+                                        "http://example.com/serverFilePath")),
                         new RoadmapGoalRoomResponse(1L, "goalroom1", 1, 10, LocalDateTime.now(),
                                 TODAY, TODAY.plusDays(20),
                                 new MemberResponse(member2.getId(), member2.getNickname().getValue(),
-                                        "default-member-image"))
-                );
+                                        "http://example.com/serverFilePath"))), false);
 
-        assertThat(result).usingRecursiveComparison()
-                .ignoringFields("createdAt")
+        assertThat(result)
+                .usingRecursiveComparison()
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -466,23 +527,70 @@ class RoadmapReadServiceTest {
         // when
         // then
         assertThatThrownBy(
-                () -> roadmapService.findRoadmapGoalRoomsByFilterType(1L,
-                        RoadmapGoalRoomsFilterTypeDto.LATEST, new CustomScrollRequest(null, null, null, null, 10)))
+                () -> roadmapService.findRoadmapGoalRoomsByOrderType(1L,
+                        RoadmapGoalRoomsOrderTypeDto.LATEST, new CustomScrollRequest(null, 10)))
                 .isInstanceOf(NotFoundException.class)
                 .hasMessageContaining("존재하지 않는 로드맵입니다. roadmapId = 1");
     }
 
-    private Member 사용자를_생성한다() {
-        final MemberProfile memberProfile = new MemberProfile(Gender.MALE, LocalDate.of(1995, 9, 30), "010-0000-0000");
+    @Test
+    void 로드맵의_리뷰_목록을_최신순으로_조회한다() throws MalformedURLException {
+        // given
+        final Member member1 = 사용자를_생성한다(1L, "identifier1", "리뷰어1");
+        final Member member2 = 사용자를_생성한다(2L, "identifier2", "리뷰어2");
+        final RoadmapNode roadmapNode1 = new RoadmapNode("로드맵 1주차", "로드맵 1주차 내용");
+        final RoadmapNode roadmapNode2 = new RoadmapNode("로드맵 2주차", "로드맵 2주차 내용");
+        final RoadmapNodes roadmapNodes = new RoadmapNodes(List.of(roadmapNode1, roadmapNode2));
+        final RoadmapContent roadmapContent = new RoadmapContent("로드맵 본문");
+        roadmapContent.addNodes(roadmapNodes);
+        final Roadmap roadmap = new Roadmap(1L, "로드맵 제목", "로드맵 설명", 100, RoadmapDifficulty.DIFFICULT, member1,
+                new RoadmapCategory("it"));
 
-        return new Member(1L, new Identifier("identifier1"),
-                new EncryptedPassword(new Password("password1!")), new Nickname("썬샷"), memberProfile);
+        final RoadmapReview roadmapReview1 = new RoadmapReview("리뷰 내용", 5.0, member1);
+        final RoadmapReview roadmapReview2 = new RoadmapReview("리뷰 내용", 4.5, member2);
+        roadmapReview1.updateRoadmap(roadmap);
+        roadmapReview2.updateRoadmap(roadmap);
+
+        when(roadmapRepository.findRoadmapById(anyLong())).thenReturn(Optional.of(roadmap));
+        when(roadmapReviewRepository.findRoadmapReviewWithMemberByRoadmapOrderByLatest(any(), any(), anyInt()))
+                .thenReturn(List.of(roadmapReview2, roadmapReview1));
+        given(fileService.generateUrl(anyString(), any()))
+                .willReturn(new URL("http://example.com/serverFilePath"));
+
+        // when
+        final List<RoadmapReviewResponse> response = roadmapService.findRoadmapReviews(1L,
+                new CustomScrollRequest(null, 10));
+
+        final List<RoadmapReviewResponse> expect = List.of(
+                new RoadmapReviewResponse(2L, new MemberResponse(2L, "리뷰어2", "http://example.com/serverFilePath"),
+                        LocalDateTime.now(), "리뷰 내용", 4.5),
+                new RoadmapReviewResponse(1L, new MemberResponse(1L, "리뷰어1", "http://example.com/serverFilePath"),
+                        LocalDateTime.now(), "리뷰 내용", 5.0));
+
+        // then
+        assertThat(response)
+                .usingRecursiveComparison()
+                .ignoringFields("id", "member.imageUrl", "createdAt")
+                .isEqualTo(expect);
     }
 
-    private Member 사용자를_생성한다(final Long id) {
-        return new Member(id, new Identifier("identifier1"),
-                new EncryptedPassword(new Password("password1")), new Nickname("name1"),
-                new MemberImage("originalFileName", "default-member-image", ImageContentType.JPG),
+    @Test
+    void 로드맵_리뷰_조회_시_유효하지_않은_로드맵_아이디라면_예외를_반환한다() {
+        // given
+        when(roadmapRepository.findRoadmapById(anyLong()))
+                .thenThrow(new NotFoundException("존재하지 않는 로드맵입니다. roadmapId = 1"));
+
+        // when, then
+        assertThatThrownBy(() -> roadmapService.findRoadmapReviews(1L, new CustomScrollRequest(null, 2)))
+                .isInstanceOf(NotFoundException.class)
+                .hasMessageContaining("존재하지 않는 로드맵입니다. roadmapId = 1");
+    }
+
+    private Member 사용자를_생성한다(final Long id, final String identifier, final String nickname) {
+        return new Member(id, new Identifier(identifier),
+                new EncryptedPassword(new Password("password1!")),
+                new Nickname(nickname),
+                new MemberImage("originalFileName", "default-profile-image", ImageContentType.JPG),
                 new MemberProfile(Gender.FEMALE, LocalDate.of(2000, 7, 20), "010-1111-1111"));
     }
 
@@ -510,15 +618,6 @@ class RoadmapReadServiceTest {
 
     private RoadmapContent 로드맵_컨텐츠를_생성한다(final Long id, final String content) {
         return new RoadmapContent(id, content);
-    }
-
-    private Roadmap 제목별로_로드맵을_생성한다(final String roadmapTitle) {
-        final RoadmapContent roadmapContent = new RoadmapContent("로드맵 내용1");
-        final RoadmapCategory category = new RoadmapCategory(1L, "여행");
-        final Roadmap roadmap = new Roadmap(1L, roadmapTitle, "로드맵 소개글", 10, RoadmapDifficulty.NORMAL, member,
-                category);
-        roadmap.addContent(roadmapContent);
-        return roadmap;
     }
 
     private List<RoadmapCategory> 로드맵_카테고리_리스트를_반환한다() {
@@ -564,10 +663,10 @@ class RoadmapReadServiceTest {
         final GoalRoom completedGoalRoom2 = new GoalRoom(new GoalRoomName("완료된 골룸 2"),
                 new LimitedMemberCount(20), roadmapContent, member);
 
-        runningGoalRoom1.updateStatus(GoalRoomStatus.RUNNING);
-        runningGoalRoom2.updateStatus(GoalRoomStatus.RUNNING);
-        completedGoalRoom1.updateStatus(GoalRoomStatus.COMPLETED);
-        completedGoalRoom2.updateStatus(GoalRoomStatus.COMPLETED);
+        runningGoalRoom1.start();
+        runningGoalRoom2.start();
+        completedGoalRoom1.complete();
+        completedGoalRoom2.complete();
 
         return List.of(recruitedGoalRoom1, recruitedGoalRoom2, runningGoalRoom1, runningGoalRoom2,
                 completedGoalRoom1, completedGoalRoom2);
